# yoloTrain

./: Getdata.rar  README.md  imgprocess.py  voc_label.py  voc_label.py~  yolo2_train.py  yolo训练自己的样本库.txt
train_txt生成/: imgprocess.py  imgprocess.py~
xml生成/: labelImg.md
图片生成/: CMakeLists.txt  CMakeLists.txt~
图片生成/src/: test.cpp~
